<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="0dp"
android:layout_weight="60"
android:padding="30dp"
android:layout_height="match_parent"
android:orientation="vertical">
<EditText
    android:id="@+id/edtNom"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:hint="@string/activity_main_hint_nom"
    />
<EditText
    android:id="@+id/edtCognom"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:hint="@string/activity_main_hint_cognom"
    />
<Spinner
    android:id="@+id/spnProvincia"
    android:layout_width="match_parent"
    android:hint="@string/activity_main_hint_nom"
    android:layout_height="0dp"
    android:layout_weight="1"></Spinner>
<RadioGroup
    android:id="@+id/rdgSexe"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:gravity="center"
    >
    <RadioButton
        android:id="@+id/rgdSH"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_home" />
    <RadioButton
        android:id="@+id/rgdSD"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_dona" />
    <RadioButton
        android:id="@+id/rgdSO"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_other" />
    </RadioGroup>
<Button
    android:id="@+id/btnOk"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Save"/>
</LinearLayout>